--- a/build.xml
+++ b/build.xml
@@ -197,7 +197,7 @@ c:/jakarta-ant/bin/ant all
 
             <mkdir dir='javadoc-jain' />
 
-            <javadoc packagenames="javax.sip.*,javax.sip.header.*,javax.sip.message.*,javax.sip.address.*,javax.sdp.*" sourcepath="${srcroot}" overview="${docdir}/overview.html" destdir="javadoc-jain" use="true" splitindex="true" windowtitle="JAIN-SIP-2.0 RI For the People !" doctitle="NIST SIP/SDP Parser and Stack (v1.3)" public="true" author="true" version="true" defaultexcludes="yes" additionalparam="-breakiterator">
+            <javadoc packagenames="javax.sip.*,javax.sip.header.*,javax.sip.message.*,javax.sip.address.*,javax.sip.header.ims.*" sourcepath="${srcroot}" overview="${docdir}/overview.html" destdir="javadoc-jain" use="true" splitindex="true" windowtitle="JAIN-SIP-2.0 Specification" doctitle="JAIN-SIP-2.0 Specification" public="true" author="true" version="true" defaultexcludes="yes" additionalparam="-breakiterator">
                 <classpath>
                     <pathelement location="${jain-sip-api-jar}" />
                 </classpath>
@@ -210,7 +210,7 @@ c:/jakarta-ant/bin/ant all
             <bottom>
                 <![CDATA[
                     <font size="-1">
-                <a href="NIST, BEA Systems, Sun Microsystems and others" </a>
+                <a href="Oracle, NIST, BEA Systems, Sun Microsystems and others" </a>
                     <br>
                         <a href="${href.copyright}"> See conditions of use. </a>
                         <br>
